@@ -81,14 +81,17 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .newCreateInstanceCommand()
                                 .bpmnProcessId(#{processDefinitionId:any(String)})
                                 .latestVersion()
+                                .businessId(#{businessId:any(String)})
                                 .send()
                                 .join();
                             """),
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionKey", 0)),
-            List.of(" businessKey was removed")),
+            List.of(
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionKey", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("businessId", 1)),
+            Collections.emptyList()),
         new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByKey(String processDefinitionKey, Map<String, Object>
@@ -122,6 +125,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .newCreateInstanceCommand()
                                 .bpmnProcessId(#{processDefinitionId:any(String)})
                                 .latestVersion()
+                                .businessId(#{businessId:any(String)})
                                 .variables(#{variableMap:any(java.util.Map)})
                                 .send()
                                 .join();
@@ -131,8 +135,9 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
                 new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionKey", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("businessId", 1),
                 new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 2)),
-            List.of(" businessKey was removed")),
+            Collections.emptyList()),
         new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceById(String processDefinitionId)"
@@ -159,14 +164,17 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                             #{camundaClient:any(io.camunda.client.CamundaClient)}
                                 .newCreateInstanceCommand()
                                 .processDefinitionKey(Long.valueOf(#{processDefinitionId:any(String)}))
+                                .businessId(#{businessId:any(String)})
                                 .send()
                                 .join();
                             """),
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionId", 0)),
-            List.of(" businessKey was removed")),
+            List.of(
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionId", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("businessId", 1)),
+            Collections.emptyList()),
         new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceById(String processDefinitionId, Map<String, Object>
@@ -198,6 +206,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                             #{camundaClient:any(io.camunda.client.CamundaClient)}
                                 .newCreateInstanceCommand()
                                 .processDefinitionKey(Long.valueOf(#{processDefinitionId:any(String)}))
+                                .businessId(#{businessId:any(String)})
                                 .variables(#{variableMap:any(java.util.Map)})
                                 .send()
                                 .join();
@@ -207,8 +216,9 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
                 new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionId", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("businessId", 1),
                 new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 2)),
-            List.of(" businessKey was removed")),
+            Collections.emptyList()),
         new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessage(String messageName)"
@@ -474,7 +484,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(" businessKey was removed")),
+            List.of(RecipeUtils.businessIdHint("businessKey"))),
         new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "processDefinitionTenantId"),
@@ -528,7 +538,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(" businessKey was removed")),
+            List.of(RecipeUtils.businessIdHint("businessKey"))),
         new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "setVariables", "businessKey"),
@@ -546,7 +556,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(" businessKey was removed")),
+            List.of(RecipeUtils.businessIdHint("businessKey"))),
         new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
@@ -588,7 +598,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(" businessKey was removed")),
+            List.of(RecipeUtils.businessIdHint("businessKey"))),
         new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById"),
@@ -620,7 +630,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(" businessKey was removed")),
+            List.of(RecipeUtils.businessIdHint("businessKey"))),
         new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "processDefinitionTenantId"),
@@ -671,7 +681,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(" businessKey was removed")),
+            List.of(RecipeUtils.businessIdHint("businessKey"))),
         new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "setVariables", "businessKey"),
@@ -688,7 +698,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(" businessKey was removed")),
+            List.of(RecipeUtils.businessIdHint("businessKey"))),
         new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
@@ -728,7 +738,7 @@ public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationR
             RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
             ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-            List.of(" businessKey was removed")));
+            List.of(RecipeUtils.businessIdHint("businessKey"))));
   }
   */
 
